<resources>
    <string name="app_name" translatable="false">Notify for 3DJ</string>
    <string name="login_text">Log in with your 3DJuegos credentials to get your mentions on your device.</string>
    <string name="login_email">E-mail</string>
    <string name="login_pass">Password</string>
    <string name="login_login">Log in</string>
    <string name="notification_desc_text">They have mentioned you in %1$s</string>
    <string name="notification_title">New mention from %1$s</string>
    <string name="notification_summary">You have %1$d new mentions</string>
    <string name="notification_inboxstyle_line">%1$s has mentioned you in %2$s</string>
    <string name="notification_extra">+%1$d more</string>
    <string name="main_logged_in">You are logged in.</string>
    <string name="button_log_out">Log Out</string>
    <string name="button_check">Check mentions now</string>
    <string name="snackbar_no_new_mentions">You have no new mentions</string>
    <string name="error_at_login">There was an error while trying to log in</string>
    <string name="snackbar_logged_out">Successfully logged out</string>
    <string name="error">There was an error</string>
    <string name="snackbar_logged_in">Successfully logged in</string>
    <string name="main_freq">Frequency with which mentions are checked.</string>
    <string name="main_freq_30">30 minutes</string>
    <string name="main_freq_60">One hour</string>
    <string name="main_freq_halfday">12 hours</string>
    <string name="main_freq_day">One day</string>
    <string name="error_no_email">You have forgot your email</string>
    <string name="error_no_pass">You have forgot your password</string>
    <string name="main_silent_desc_title">Silent notifications</string>
    <string name="main_delete_desc_title">Delete mention on notification press</string>
    <string name="main_delete_desc_subtitle">The mention will also be deleted in 3DJuegos, unless you\'re notified of two or more mentions at once.</string>
    <string name="snackbar_settings_changed">New setting saved successfully</string>
    <string name="main_update_desc_title">Check for updates</string>
    <string name="main_update_desc_subtitle">When mentions are checked, app updates will also be.</string>
    <string name="main_app_version">App version: v%1$s</string>
    <string name="notification_update_available">There are new updates available!</string>
    <string name="notification_update_desc">New version: v%1$s</string>
    <string name="main_db_desc_title">Don\'t notify read mentions</string>
    <string name="main_db_desc_subtitle">Mentions will be remembered and you won\'t be notified twice from the same one. Data will be lost upon logout.</string>
    <string name="main_avatar_desc_title">Show users\' avatars</string>
    <string name="alert_disable_updating_msg">It\'s not recommended to disable the automatic update search: on one hand, 3DJuegos might make a change on their interface that would completely break the app. On the other hand, the app could have undiscovered bugs. In both cases it\'s advisable to keep update searching enabled. Are you sure you want to disable it?</string>
    <string name="alert_disable_updating_cancel">Do nothing</string>
    <string name="alert_disable_updating_accept">Disable update check</string>
    <string name="alert_disable_updating_title">Confirm action</string>
</resources>
