<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.mellamopablo.notifyfor3dj.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_main_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textIsSelectable="false" />

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/editText_email"
                    android:text="@string/login_email"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_email"
                    android:ems="10"
                    android:enabled="true"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/label_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText_email"
                    android:labelFor="@+id/editText_pass"
                    android:text="@string/login_pass"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editText_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/label_pass"
                    android:ems="10"
                    android:enabled="true"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_pass"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login_login" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_loggedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_login">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/main_logged_in" />

                <LinearLayout
                    android:id="@+id/layout_buttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView2"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <Button
                        android:id="@+id/button_check"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_check"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/button_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_log_out"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_freq_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/layout_buttons"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_freq" />

                    <RadioGroup
                        android:id="@+id/freq_select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_freq_30"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_freq_30" />

                        <RadioButton
                            android:id="@+id/radio_freq_60"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_freq_60" />

                        <RadioButton
                            android:id="@+id/radio_freq_halfday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_freq_halfday" />

                        <RadioButton
                            android:id="@+id/radio_freq_day"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_freq_day" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_silent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_freq_select"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text_silent_desc_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10"
                        android:text="@string/main_silent_desc_title"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RelativeLayout
                        android:id="@+id/checkbox_silent_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.90">

                        <CheckBox
                            android:id="@+id/checkbox_silent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_silent"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/text_avatar_desc_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10"
                        android:text="@string/main_avatar_desc_title"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RelativeLayout
                        android:id="@+id/checkbox_avatar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.90">

                        <CheckBox
                            android:id="@+id/checkbox_avatar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_avatar"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/layout_delete_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_delete_desc_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_delete_desc_title"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/text_delete_desc_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_delete_desc_subtitle"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/checkbox_delete_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.90">

                        <CheckBox
                            android:id="@+id/checkbox_delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_db"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_delete"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/layout_db_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_db_desc_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_db_desc_title"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/text_db_desc_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_db_desc_subtitle"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/checkbox_db_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.90">

                        <CheckBox
                            android:id="@+id/checkbox_db"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:enabled="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_db"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:id="@+id/layout_update_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.10"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_update_desc_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_update_desc_title"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/text_update_desc_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_update_desc_subtitle"
                            android:textAppearance="?android:attr/textAppearanceSmall" />

                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/checkbox_update_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.90">

                        <CheckBox
                            android:id="@+id/checkbox_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:clickable="true"
                            android:enabled="true" />
                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_update"
                    android:textSize="12sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
